# seedream-HuiBenShengCHENG

./: .coze  .env.local  .gitignore  BUILD_GUIDE.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  README.zh-CN.md  SECURITY.md  capacitor.config.ts  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
android/app/: build.gradle
docs/superpowers/specs/: 2026-07-09-animation-design.md
drizzle/: 0000_wandering_leopardon.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: start.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/app/characters/: page.tsx
src/app/components/: StyleShowcase.tsx
src/app/create/: page.tsx
src/app/diagnostics/: page.tsx
src/app/examples/: page.tsx
src/app/generating/: page.tsx
src/app/login/: page.tsx
src/app/my-works/: page.tsx
src/app/preview/: page.tsx
src/app/register/: page.tsx
src/app/setup/: page.tsx
src/app/storyboard/: page.tsx
src/components/: AnimatedBackground.tsx  AutoDiagnostics.tsx  Footer.tsx  navigation.tsx  scroll-reveal.tsx  use-scroll-reveal.tsx
src/config/: styleImages.ts
src/lib/: auth.ts  crypto.ts  db.ts  diagnostics.ts  localAuth.ts  rateLimit.ts  refreshImageUrls.ts  storage.ts  storyStorage.ts  styleConfig.ts  supabaseClient.ts  volcengine.ts
src/utils/: languageDetection.ts
tmp/: favicon-designs-with-ai.html  favicon-designs.html
(+22 files in other folders)
