[package]
name = "seedream"
version = "1.0.0"
description = "Seedream - AI 儿童绘本创作工具"
authors = ["Seedream"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
